Backported to 1.16.5